2006-07-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegate/appupdate.py:
	  Removed bizarre notebook focus grabbing when next or previous
	  page activated.

	* lib/gaupol/gtk/dialog/duradjust.py:
	* lib/gaupol/gtk/dialog/find.py:
	* lib/gaupol/gtk/dialog/posadjust.py:
	* lib/gaupol/gtk/dialog/posshift.py:
	* lib/gaupol/gtk/dialog/subinsert.py:
	  Fixed sensitivity initializations and selected target radios
	  being both active and insensitive.

2006-07-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui/menubar.xml:
	* data/ui/popups.xml:
	* lib/gaupol/base/delegate/edit.py:
	* lib/gaupol/base/delegate/test/test_edit.py:
	* lib/gaupol/base/position/calc.py:
	* lib/gaupol/base/position/test/test_calc.py:
	* lib/gaupol/gtk/delegate/edit.py:
	* lib/gaupol/gtk/delegate/format.py:
	* lib/gaupol/gtk/delegate/test/test_edit.py:
	* lib/gaupol/gtk/delegate/view.py:
	  Implemented subtitle split and merge.
	  Changed some keybindings.

	* lib/gaupol/gtk/delegate/viewupdate.py:
	  Set 200 as maximum size for character statusbar.

	* lib/gaupol/gtk/dialog/find.py:
	  Swapped ins and bound on text buffer selection.

2006-07-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/formats/tmplayer.notes:
	* doc/formats/tmplayer.sample:
	* lib/gaupol/base/cons.py:
	* lib/gaupol/base/file/classes.py:
	* lib/gaupol/base/file/tmplayer.py:
	* lib/gaupol/base/tags/classes.py:
	* lib/gaupol/base/tags/tmplayer.py:
	  Added support for TMPlayer format.

	* lib/gaupol/base/file/microdvd.py:
	  Removed unnecessary list duplication.

2006-07-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/cellrend/classes.py:
	* lib/gaupol/gtk/cellrend/pixbuf.py:
	* lib/gaupol/gtk/cellrend/test/test_classes.py:
	* lib/gaupol/gtk/cellrend/test/test_pixbuf.py:
	* lib/gaupol/gtk/delegate/fileopen.py:
	* lib/gaupol/gtk/page.py:
	* lib/gaupol/gtk/util/conf.py:
	* lib/gaupol/gtk/view.py:
	  Implemented showing .srtx files as images.

	* lib/gaupol/gtk/dialog/duradjust.py: